--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "echo 'No build step needed'",
     "start": "npx http-server -p 3000 --cors"
   },
-  "dependencies": {},
+  "dependencies": {
+    "formidable": "^3.5.1"
+  },
   "devDependencies": {
     "vercel": "^32.4.1"
   },
