--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "build": "echo 'No build step needed'",
     "start": "npx http-server -p 3000 --cors"
   },
-  "dependencies": {
-    "formidable": "^3.5.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "vercel": "^32.4.1"
   },
